<resources>
    <string name="app_name">Masak Apa</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dificulty">Tingkat Kesulitan</string>
    <string name="desc_text">Deskripsi</string>
    <string name="ingredients_text">Bahan</string>
    <string name="cara_masak_text">Cara Masak</string>
    <string name="by_text">by</string>
    <string name="search_hint_text">Mo masak apa ya hari ini..</string>
    <string name="failed_found_text">Tidak dapat menemukan resep </string>
    <string name="categorys_hint_label">Resep Untuk Kamu ❤</string>
    <string name="search_success_text">Menampilkan hasil pencarian</string>
    <string name="recipe_for_you_text">Resep Untukmu Hari ini 😍</string>
    <string name="list_empty_text">List kamu saat ini kosong ayo coba cari resep masakan favoritemu 😘</string>
    <string name="no_inet_title">Koneksi Internet Terputus</string>
    <string name="no_inet_text">Oops.. Koneksi Internet Kamu Terputus 😥</string>
    <string name="add_bucket_text">Simpan</string>
    <string name="category_permission_text">Kategori saat ini tidak dapat ditampilkan, pastikan permission disetujui</string>
    <string name="bucket_permission_text">Gagal menyimpan resep, pastikan permission disetujui</string>
    <string name="bucket_permission_reason">Permission ini digunakan untuk menyimpan resep di bucket</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="finding_text">Sedang Mencari...</string>
</resources>