<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/fragment_search_scene"
    tools:context=".ui.search.SearchFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--    <TextView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:text="@string/hello_blank_fragment" />-->

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/textInputSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="?colorSurface"
        android:theme="@style/Widget.MaterialComponents.CardView"
        android:drawableStart="@drawable/ic_search_light"
        android:drawablePadding="15dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:foreground="@color/material_on_primary_disabled"
        android:hint="@string/app_name"
        android:lines="1"
        android:maxLines="1"
        android:padding="10dp"
        android:singleLine="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputSearch">

        <TextView
            android:id="@+id/categorysHintLabel"
            style="@style/textMiniHead_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="13dp"
            android:text="@string/categorys_hint_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_categorys_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/searchResultHintText"
        style="@style/desc_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="13dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat5"
        tools:text="@string/search_success_text" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_search_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_marginTop="30dp"
        android:paddingBottom="120dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchResultHintText"
        tools:listitem="@layout/lists_recipes" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/snapLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_search_list">

        <include
            layout="@layout/snap_layout" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.motion.widget.MotionLayout >